feat: seperate the solar and the rocket from the background ...
Also, the relative position of the solar and the rocket are defined.
So, when the windows is resized,
the relative position remains identical.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="background">
+  <div class="main-container">
     <!-- Home button at the top right corner -->
     <div class="home-star-container">
       <div>
@@ -75,8 +75,11 @@
       </tr>
     </table>
 
-    <!-- Rocket -->
-    <img id="rocket" src="img/rocket-smoke.png">
+    <!-- Background solar and rocket -->
+    <div id="background">
+      <img id="solar" src="img/solar.png">
+      <img id="rocket" src="img/rocket-smoke.png">
+    </div>
 
     <!-- Contents on the home page -->
     <div class="info" id="home">
