style: update the font and images given by the designer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Background solar and rocket -->
     <div id="background">
       <img id="solar" src="img/solar.png">
-      <img id="rocket" src="img/rocket-smoke.png">
+      <img id="rocket" src="img/rocket-with-smoke.png">
     </div>
 
     <!-- Contents on the home page -->
