feat: add info pages for 12 constellations

--- a/index.html
+++ b/index.html
@@ -111,49 +111,109 @@
         on Mount Ida, Ganymede was spotted by Zeus. The king of gods fell in love with him and flew down to the mountain in the form of a large bird, whisking Ganymede away to the heavens. Ever since, the boy has served as cupbearer to the gods. Ovid
         has Orpheus sing the tale.</p>
     </div>
+
     <div class="info" id="cons2">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons2.png" id="cons2" alter="Pisces">
+      <h1>Pisces</h1>
+      <hr>
+      <p class="normal-text">Pisces is the twelfth and final astrological sign in the zodiac. It is a negative, mutable sign. It spans 330° to 360° of celestial longitude. Under the tropical zodiac, the sun transits this area between February 19 and March 20.In sidereal astrology,
+        the Sun currently transits the constellation of Pisces from approximately March 12 to April 18.In classical interpretations, the symbol of the fish is derived from the ichthyocentaurs, who aided Aphrodite when she was born from the sea.According
+        to some tropical astrologers, the current astrological age is the Age of Pisces, while others maintain that currently it is the Age of Aquarius.</p>
     </div>
+
     <div class="info" id="cons3">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons3.png" id="cons3" alter="Aries">
+      <h1>Aries</h1>
+      <hr>
+      <p class="normal-text">Aries is the first astrological sign in the zodiac, spanning the first 30 degrees of celestial longitude (0°≤ λ &lt; 30°), and originates from the constellation of the same name. Under the tropical zodiac, the Sun transits this sign from approximately
+        March 20 to April 21 each year. This time duration is exactly the first month of the Solar Hijri calendar (Arabic Hamal/Persian Farvardin/Wray). </p>
+      <p class="normal-text">According to the tropical system of astrology, the Sun enters the sign of Aries when it reaches the March equinox, which occurs on average on March 21 (by design). Because the Earth takes approximately 365.24 days to go around the Sun, the precise
+        time of the equinox is not the same each year, and generally will occur about six hours later from one year to the next until reset by a leap year. February 29 of a leap year causes that year's vernal equinox to fall about eighteen hours earlier—according
+        to the calendar—compared with the previous year. From 1800 to 2050 inclusive the vernal equinox date has (or will) range(d) from March 19 at 22:34 UT1 in 2048 to March 21 at 19:15 UT1 in 1903.Under the sidereal zodiac, the sun approximately transits
+        Aries from April 15 to May 14.</p>
     </div>
+
     <div class="info" id="cons4">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons4.png" id="cons4" alter="Taurus">
+      <h1>Taurus</h1>
+      <hr>
+      <p class="normal-text">Taurus is the second astrological sign in the modern zodiac. It spans from 30° to 60° of the zodiac. This sign belongs to the Earth element or triplicity, and has a feminine or negative polarity, as well as a fixed modality, quality, or quadruplicity.
+        It is a Venus-ruled sign along with Libra. The Moon is in its exaltation here at exactly 3°. The Sun transits this sign from approximately April 21 until May 20 in western astrology. and from May 15- June 15 in sidereal astrology.</p>
     </div>
+
     <div class="info" id="cons5">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons5.png" id="cons5" alter="Gemini">
+      <h1>Gemini</h1>
+      <hr>
+      <p class="normal-text">Gemini is the third astrological sign in the zodiac. Under the tropical zodiac, the sun transits this sign between about May 21 to June 21. Under the sidereal zodiac, the sun transits this sign from about June 16 to July 16. Gemini is represented
+        by the twins, Castor and Pollux, known as the Dioscuri in Greek mythology. It is a positive, mutable sign. Gemini is associated with the Yang polarity (masculine) in the Yin Yang ancient Chinese concept.</p>
     </div>
+
     <div class="info" id="cons6">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons6.png" id="cons6" alter="Cancer">
+      <h1>Cancer</h1>
+      <hr>
+      <p class="normal-text">Cancer is the fourth astrological sign in the zodiac, originating from the constellation of Cancer. It spans from 90° to 120° celestial longitude. Under the tropical zodiac, the Sun transits this area between approximately June 22 and July 22, and
+        under the sidereal zodiac, the Sun transits this area between approximately July 16 and August 17.</p>
+      <p class="normal-text">In astrology, Cancer is the cardinal sign of the Water trigon, which is made up of Cancer, Pisces, and Scorpio. It is one of the six negative signs, and its ruling planet is the Moon. Though some depictions of Cancer feature a lobster or crayfish,
+        the sign is most often represented by the crab, based on the Karkinos. Cancer's opposite sign is Capricorn.</p>
     </div>
+
     <div class="info" id="cons7">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons7.png" id="cons7" alter="Leo">
+      <h1>Leo</h1>
+      <hr>
+      <p class="normal-text">Leo is the fifth sign of the zodiac. It corresponds to the constellation Leo and comes after Cancer and before Virgo. The traditional Western zodiac associates Leo with the period between July 23 and August 22, and the sign spans the 120th to 150th
+        degree of celestial longitude.Leo is associated with fire, accompanied by Aries and Sagittarius, and its modality is fixed. Under the tropical zodiac, the Sun transits this area on average between July 23 and August 22 each year, and under the
+        sidereal zodiac, the Sun currently transits this area from approximately August 16 to September 15. The constellation Leo is associated with the mythological Nemean lion. The lion is a very important and prominent symbol in Greek mythology. Its
+        opposite sign is Aquarius.</p>
     </div>
+
     <div class="info" id="cons8">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons8.png" id="cons8" alter="Virgo">
+      <h1>Virgo</h1>
+      <hr>
+      <p class="normal-text">Virgo is the sixth astrological sign in the Zodiac. It spans the 150–180th degree of the zodiac. Under the tropical zodiac, the Sun transits this area, on average, between August 23 and September 22, while the Sun transits the Virgo from approximately
+        September 16 to October 30. Individuals born during these dates, depending on the system of astrology in question, may be called Virgos or Virgoans;they are also represented in newspaper horoscopes with other astrological signs.The symbol of the
+        maiden is based on Astraea. In Greek mythology, she was the last immortal to abandon Earth at the end of the Silver Age, when the gods fled to Olympus – hence the sign's association with Earth.</p>
     </div>
+
     <div class="info" id="cons9">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons9.png" id="cons9" alter="Libra">
+      <h1>Libra</h1>
+      <hr>
+      <p class="normal-text">Libra is the seventh astrological sign in the zodiac. It spans 180°–210° celestial longitude. The Sun transits this sign on average between September 23 (September equinox) and October 23.Under the sidereal zodiac, the Sun currently transits the
+        constellation of Libra from approximately October 31 to November 22. The symbol of the scales is based on the Scales of Justice held by Themis, the Greek personification of divine law and custom. She became the inspiration for modern depictions
+        of Lady Justice. The ruling planet of Libra is Venus. Libra is the only zodiac sign that is represented by an object; with the other eleven signs represented by either an animal or mythological character.</p>
     </div>
+
     <div class="info" id="cons10">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons10.png" id="cons10" alter="Scorpio">
+      <h1>Scorpio</h1>
+      <hr>
+      <p class="normal-text">Scorpio is the eighth astrological sign in the zodiac, originating from the constellation of Scorpius. It spans 210°–240° ecliptic longitude. Under the tropical zodiac (most commonly used in Western astrology), the Sun transits this sign on average
+        from October 23 to November 22. Under the sidereal zodiac (most commonly used in Hindu astrology), the Sun is in Scorpio from approximately November 16 to December 15. Depending on which zodiac system one uses, someone born under the influence
+        of Scorpio may be called a Scorpio or a Scorpion.</p>
     </div>
+
     <div class="info" id="cons11">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons11.png" id="cons11" alter="Sagittarius">
+      <h1>Sagittarius</h1>
+      <hr>
+      <p class="normal-text">Sagittarius is the ninth astrological sign, which is associated with the constellation Sagittarius and spans 240–270th degrees of the zodiac. Under the tropical zodiac, the sun transits this sign between approximately November 23 and December 21
+        and under the sidereal zodiac from December 18 - January 15. Greek mythology associates Sagittarius with the centaur Chiron, who mentored Achilles, a Greek hero of the Trojan War, in archery.</p>
+      <p class="normal-text">Sagittarius, the half human and half horse, is the centaur of mythology, the learned healer whose higher intelligence forms a bridge between Earth and Heaven. Also known as the Archer, Sagittarius is represented by the symbol of a bow and arrow.</p>
     </div>
+
     <div class="info" id="cons12">
-      <p class="normal-text">No resource are provided.</p>
-      <p class="normal-text">Please select the top left star at the home page.</p>
+      <img src="img/cons12.png" id="cons12" alter="Capricorn">
+      <h1>Capricorn</h1>
+      <hr>
+      <p class="normal-text">Capricorn is the tenth astrological sign in the zodiac out of twelve total zodiac signs, originating from the constellation of Capricornus, the horned goat. It spans the 270–300th degree of the zodiac, corresponding to celestial longitude. Under
+        the tropical zodiac, the sun transits this area from about December 21 to January 21 the following year, and under the sidereal zodiac, the sun transits the constellation of Capricorn from approximately January 16 to February 16. In astrology,
+        Capricorn is considered an earth sign, negative sign,and one of the four cardinal signs. Capricorn is said to be ruled by the planet Saturn.There appears to be a connection between traditional characteristics of Capricorn as a sea goat and the
+        Sumerian god of wisdom and waters, Enki, who also had the head and upper body of a goat and the lower body and tail of a fish. Later known as Ea in Akkadian and Babylonian mythology, Enki was the god of intelligence (gestú, literally "ear"), creation,
+        crafts; magic; water, seawater and lakewater (a, aba, ab).In Hindu astrology, the equivalent of Capricorn is Makara, the Crocodile.</p>
     </div>
   </div>
   <script src="lib\jquery-3.6.0.min.js"></script>
